--- a/Views/Home/PictureUpload.cshtml
+++ b/Views/Home/PictureUpload.cshtml
@@ -281,7 +281,7 @@
             //var re = /^[a-zA-Z]{2}-[a-zA-Z]{3}_[0-9]{8}_[a-zA-Z]{1}[0-9]{2}.[a-zA-Z0-9]{3}$/;
             //nieuwe regex: /^[a-zA-Z]{2}-[a-zA-Z]{3}_DHP_[a-zA-Z0-9]{2}_[a-zA-Z]{2}[0-9]{2}_[a-zA-Z]{1}[0-9]{2}_[0-9]{8}.[a-zA-Z0-9]{3}$/
             //of stricter: 
-            var re = /^[a-zA-Z]{2}-[a-zA-Z]{3}_DHP_[a-zA-Z0-9]{2}_[SC]{1}P[0-9]{2}_L[0-9]{2}_[0-9]{8}.[a-zA-Z0-9]{3}$/;
+            var re = /^[a-zA-Z]{2}-[a-zA-Z0-9]{3}_DHP_[a-zA-Z0-9]{2}_[SC]{1}P[0-9]{2}_L[0-9]{2}_[0-9]{8}.[a-zA-Z0-9]{3}$/;
             if ((m = re.exec(file.name)) == null) {
                 $("#wrongfilenames").append(file.name + "<br/>");
                 $("#wrongfilenames").show();
@@ -299,8 +299,14 @@
                         data: { siteID: siteID, plotname: plotname },
                         contentType: "application/json; charset=utf-8",
                         success: function (data, status) {
-                            $("#plot" + plotname + "slope").val(data.slope);
-                            $("#plot" + plotname + "slopeAspect").val(data.slopeAspect);
+                            if (data == null) {
+                                $("#plot" + plotname + "slope").val(0);
+                                $("#plot" + plotname + "slopeAspect").val(0);
+                            }
+                            else {
+                                $("#plot" + plotname + "slope").val(data.slope);
+                                $("#plot" + plotname + "slopeAspect").val(data.slopeAspect);
+                            }
                         }
                     });
 
@@ -370,7 +376,7 @@
             if ($.trim($("#user_isFreeUser").val()) == "False") {
                 //Check filename            only for ICOS user
                 //var re = /^[a-zA-Z]{2}-[a-zA-Z]{3}_[0-9]{8}_[a-zA-Z]{1}[0-9]{2}.[a-zA-Z0-9]{3}$/;
-                var re = /^[a-zA-Z]{2}-[a-zA-Z]{3}_DHP_[a-zA-Z0-9]{2}_[SC]{1}P[0-9]{2}_L[0-9]{2}_[0-9]{8}.[a-zA-Z0-9]{3}$/;
+                var re = /^[a-zA-Z]{2}-[a-zA-Z0-9]{3}_DHP_[a-zA-Z0-9]{2}_[SC]{1}P[0-9]{2}_L[0-9]{2}_[0-9]{8}.[a-zA-Z0-9]{3}$/;
                 for (i = 0; i < files.length; i++) {
                     var m;
 
