--- a/Views/Home/UploadSetQualityChecks.cshtml
+++ b/Views/Home/UploadSetQualityChecks.cshtml
@@ -1,5 +1,43 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿@model IEnumerable<UploadWebapp.Models.QualityCheckListItem>
+
+    @{
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+<h1>Quality Checks</h1>
+
+<table class="ovv" style="border-collapse: collapse; width: 1170px;">
+    <tr>
+        <th>
+            Filename
+        </th>
+        <th>
+           Status
+        </th>
+        <th>            
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>            
+            <td>
+                @Html.DisplayFor(modelItem => item.filename)
+            </td>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.userID)
+                </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.status)
+            </td>
+            <td style="text-align:center">
+                
+                @Html.ActionLink("Edit", "EditQualityCheck", new { checkID = item.ID, setID = item.uploadSetID })
+            </td>
+        </tr>
+    }
+
+</table>
+
 
 
