ETC users - see each other's uploads

--- a/Views/Home/EditQualityCheck.cshtml
+++ b/Views/Home/EditQualityCheck.cshtml
@@ -34,7 +34,7 @@
         </h3>
         <div class="display-field col-md-12">
             @Html.EditorFor(model => model.qualityCheck.setupObjects)
-            <label>Setup Objects</label>
+            <label>Setup Objects As Expected</label>
             @Html.EditorFor(model => model.qualityCheck.setupObjectsComments)
         </div>
         <div class="display-field col-md-12">
