--- a/Views/Home/SetDetails.cshtml
+++ b/Views/Home/SetDetails.cshtml
@@ -268,8 +268,10 @@
                         <tr>
                             <th>Image</th>
                             <th>LAI</th>
+                            <th>LAIe</th>
                             <th>Threshold RC</th>  
                             <th>Clumping LX</th>
+                            <th>Overexposure</th>
                         </tr>
                         <tr>
                             <td>
