--- a/Views/Home/CameraSetups.cshtml
+++ b/Views/Home/CameraSetups.cshtml
@@ -7,7 +7,11 @@
 <h1>Camera Setups</h1>
 
 <table class="ovv" style="border-collapse: collapse; width: 1170px;">
-    <tr><th>
+    <tr>
+        <th>
+            Site
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.name)
         </th>
         <th>
@@ -51,6 +55,9 @@
 
 @foreach (var item in Model) {
     <tr>     
+        <td>
+            @Html.DisplayFor(modelItem => item.siteCode)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.name)
         </td>   
