--- a/Views/Home/CameraSetups.cshtml
+++ b/Views/Home/CameraSetups.cshtml
@@ -15,6 +15,9 @@
             @Html.DisplayNameFor(model => model.name)
         </th>
         <th>
+            Created by
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.cameraType)
         </th>
         <th>
@@ -60,7 +63,10 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.name)
-        </td>   
+        </td>  
+        <td>
+            @Html.DisplayFor(modelItem => item.username)
+        </td> 
         <td>
             @Html.DisplayFor(modelItem => item.cameraType)
         </td>
